// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`science-sim + studio render goldens > renders + pins a digest for a11yAuditor [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 35,
  "paths": 0,
  "selects": 0,
  "sha": "d8ab574fa07f58df",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for anatomy [ssr] 1`] = `
{
  "buttons": 96,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 264,
  "paths": 0,
  "selects": 0,
  "sha": "cbbbbfe815fb6f7f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for archStudio [ssr] 1`] = `
{
  "buttons": 94,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 173,
  "paths": 0,
  "selects": 0,
  "sha": "64abca02b9c10a9a",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for artStudio [ssr] 1`] = `
{
  "buttons": 12,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 59,
  "paths": 0,
  "selects": 0,
  "sha": "f59f4929543b07d1",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for astronomy [mount] 1`] = `
{
  "buttons": 18,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 81,
  "paths": 0,
  "selects": 0,
  "sha": "ee2932f695ae90d2",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bakingScience [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 56,
  "paths": 0,
  "selects": 0,
  "sha": "493c32e7140b0e4d",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bridgeLab [mount] 1`] = `
{
  "buttons": 25,
  "canvases": 0,
  "inputs": 8,
  "lengthBucket": 278,
  "paths": 6,
  "selects": 0,
  "sha": "019dfbe88ce09f1f",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cell [ssr] 1`] = `
{
  "buttons": 41,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 160,
  "paths": 0,
  "selects": 0,
  "sha": "b7c9eb97b5f5bdec",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for chemBalance [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 66,
  "paths": 0,
  "selects": 0,
  "sha": "07aa1ad8297333d0",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cyberDefense [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 97,
  "paths": 0,
  "selects": 0,
  "sha": "999fb44bfbfe0601",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echoTrainer [ssr] 1`] = `
{
  "buttons": 28,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 145,
  "paths": 6,
  "selects": 0,
  "sha": "1ef8063d34320e25",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echolocation [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 51,
  "paths": 0,
  "selects": 0,
  "sha": "69c6c7acf7c6cf49",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for epidemicSim [ssr] 1`] = `
{
  "buttons": 24,
  "canvases": 1,
  "inputs": 13,
  "lengthBucket": 480,
  "paths": 6,
  "selects": 1,
  "sha": "d63b694b27b1f2fc",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for fireEcology [ssr] 1`] = `
{
  "buttons": 29,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 128,
  "paths": 0,
  "selects": 0,
  "sha": "d79c6da87ec36301",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for flightSim [ssr] 1`] = `
{
  "buttons": 48,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 209,
  "paths": 2,
  "selects": 2,
  "sha": "b96362c81b18104a",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for galaxy [ssr] 1`] = `
{
  "buttons": 58,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 236,
  "paths": 1,
  "selects": 0,
  "sha": "f6499f6873de2087",
  "svgs": 3,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for gameStudio [ssr] 1`] = `
{
  "buttons": 34,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 233,
  "paths": 0,
  "selects": 2,
  "sha": "4bcce71de563d2b7",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for kitchenLab [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 198,
  "paths": 0,
  "selects": 0,
  "sha": "bc82022851912a8f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for microbiology [mount] 1`] = `
{
  "buttons": 14,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 228,
  "paths": 0,
  "selects": 0,
  "sha": "713a92812bead04f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for molecule [ssr] 1`] = `
{
  "buttons": 104,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 180,
  "paths": 0,
  "selects": 0,
  "sha": "5d2494d7665a816a",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for moonMission [ssr] 1`] = `
{
  "buttons": 10,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 125,
  "paths": 0,
  "selects": 0,
  "sha": "89f2b18848540c2a",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for physics [mount] 1`] = `
{
  "buttons": 36,
  "canvases": 1,
  "inputs": 9,
  "lengthBucket": 102,
  "paths": 0,
  "selects": 0,
  "sha": "b679de8b32445f7d",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for punnett [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 106,
  "paths": 0,
  "selects": 2,
  "sha": "2a9bc5ac71a610d8",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rockCycle [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 166,
  "paths": 22,
  "selects": 1,
  "sha": "604a12a1040f4197",
  "svgs": 13,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rocks [ssr] 1`] = `
{
  "buttons": 10,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 35,
  "paths": 0,
  "selects": 0,
  "sha": "2a4f428beda17d38",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for semiconductor [mount] 1`] = `
{
  "buttons": 20,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 108,
  "paths": 0,
  "selects": 2,
  "sha": "427d6f55651fd2d5",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for spaceExplorer [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 82,
  "paths": 0,
  "selects": 0,
  "sha": "30d8d4b7da43fd04",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for swimLab [ssr] 1`] = `
{
  "buttons": 13,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 69,
  "paths": 0,
  "selects": 0,
  "sha": "c6ac39a17d1fbccd",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for throwlab [ssr] 1`] = `
{
  "buttons": 57,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 281,
  "paths": 0,
  "selects": 0,
  "sha": "82aa9d34d18ae2fb",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for titrationLab [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 70,
  "paths": 0,
  "selects": 0,
  "sha": "4adc7288e6880db7",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for waterCycle [ssr] 1`] = `
{
  "buttons": 40,
  "canvases": 1,
  "inputs": 5,
  "lengthBucket": 184,
  "paths": 0,
  "selects": 1,
  "sha": "802c574c3e0b4873",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for wave [mount] 1`] = `
{
  "buttons": 36,
  "canvases": 1,
  "inputs": 8,
  "lengthBucket": 118,
  "paths": 0,
  "selects": 0,
  "sha": "bffd1add231024a9",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for weldLab [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 170,
  "paths": 0,
  "selects": 0,
  "sha": "2b2c91179dd10cd5",
  "svgs": 0,
}
`;
